--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@ It is hosted by the Huawei Hardware Security Lab. At HISC, world leading researc
 <li>Hardware-based Anomaly Detection</li>
 <li>Side Channel and Fault Injection Analysis</li>
 </ul>
-<p>We sincerely invite you to participate in Huawei HISC@CHES 2025 and share you about Hardware Security and Cryptography.</p>
+<p>We sincerely invite you to participate in Huawei HISC@CHES 2025 and share your opinions about Hardware Security and Cryptography.</p>
+
+
 
 
     </div>
