--- a/program.html
+++ b/program.html
@@ -162,7 +162,7 @@
           <div class="flex-item flex-column">
             <h2 class="add-top-margin">Registration</h2>
             <hr>
-            <p class="text">Please register for our workshop through the <a target="_blank"
+            <p class="text">We sincerely recommend you to register for our workshop through the <a target="_blank"
               href="https://docs.google.com/forms/d/1IJiZcf6YEgsrDyJwLDnaKK1d5XsNQMlwE5sgeqOGg8o/viewform?edit_requested=true">
               Form</a> or <a target="_blank"
               href="https://docs.qq.com/form/page/DYUFhb0ZGSnhpZVJ2"
