--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ institutes around the world. We exchange ideas and share the problems we face, a
 industry's toughest challenges, so as to drive technological progress for everyone.</p>
 <p>HISC@CHES 2025 is a workshop focusing on major industry trends and technology directions on hardware security and cryptography. 
 It is hosted by the Huawei Hardware Security Lab. At HISC, world leading researchers from academia, and top technical experts from industry, will come together to discuss the main industry trends and hot topics, share ideas on technology innovation and work together to push forward the development of industry. </p>
-<p>HISC@CHES 2025 will take place on <strong>September 14th</strong>, in <strong>Kuala Lumpur, Malaysia</strong>. The theme of this workshop is Exchange - Enlighten - Explore. </p>
+<p>HISC@CHES 2025 will take place on <strong>September 14th</strong>, in <strong>Club Suite 4 of Kuala Lumpur (KL) Convention Centre, Malaysia</strong>. The theme of this workshop is Exchange - Enlighten - Explore. </p>
 <p>The content of the workshop focused on the following <strong>topics</strong>:</p>
 <ul>
 <li>Hardware Root of Trust</li>
@@ -187,9 +187,7 @@ It is hosted by the Huawei Hardware Security Lab. At HISC, world leading researc
 <li>Hardware-based Anomaly Detection</li>
 <li>Side Channel and Fault Injection Analysis</li>
 </ul>
-<p>We sincerely invite you to participate in Huawei HISC@CHES 2025 and share your opinions about Hardware Security and Cryptography.</p>
-
-
+<p>We sincerely invite you to participate in Huawei HISC@CHES 2025 and share you about Hardware Security and Cryptography.</p>
 
 
     </div>
