--- a/speakers.html
+++ b/speakers.html
@@ -150,6 +150,37 @@
   </div>
 </div>
     <div class="speakers">
+
+<div class="row p-4">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-md-2 col-sm-5">
+            <img src="./static/images/speaker/ChangChipHong.jpg" width="100%" class="img-thumbnail" />
+          </div>
+          <div class="col-md-10 col-sm-6">
+            <div class="m-3 text-muted">
+              <h3>
+                <a class="main-title">
+                  Chang Chip Hong
+                </a>
+              </h3>
+            </div>
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                Professor  /  Nanyang Technological University  /  Fellow of IEEE & IET & AAIA
+              </span>
+            </div>
+            <div class="m-3">
+              Chang Chip Hong is a Professor at the School of Electrical and Electronic Engineering of Nanyang Technological University, Singapore. He has coedited six books, published 13 book chapters, more than 120 international journal articles (more than 90 are IEEE), and more than 200 refereed international conference papers. His current research interests include hardware security, AI security, biometric security, trustworthy sensing, and hardware accelerators for post-quantum cryptography and edge computational intelligence. He has delivered more than 60 keynotes, plenary, tutorials, and invited seminars. Dr. Chang was conferred the 2022 VISTA award of excellence in hardware security. He served as Senior Editorial Board member of the IEEE Journal on Emerging and Selected Topics in Circuits and Systems (JETCAS), Senior Area Editor of the IEEE Transactions on Information Forensic and Security (TIFS), and Associate Editor of the IEEE Transactions on Circuits and Systems-I (TCAS-I) and IEEE Transactions on VLSI (TVLSI) Systems. He has held key appointments in the organizing and technical program committees of more than 80 international conferences. He is the 2018-2019 IEEE CASS Distinguished Lecturer, a member of the International Artificial Intelligence Industry Alliance (AIIA) World's Top Industry Scientist, a Fellow of the IEEE, IET and AAIA.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
       
 <div class="row p-4">
   <div class="col-md-12">
@@ -157,23 +188,55 @@
       <div class="card-header">
         <div class="row">
           <div class="col-md-2 col-sm-5">
-            <img src="./static/images/speaker/Missing_avatar.svg" width="100%" class="img-thumbnail" />
+            <img src="./static/images/speaker/ZhangFan.jpg" width="100%" class="img-thumbnail" />
           </div>
           <div class="col-md-10 col-sm-6">
             <div class="m-3 text-muted">
               <h3>
                 <a class="main-title">
-                  TBA
+                  Zhang Fan (Terry)
                 </a>
               </h3>
             </div>
             <div class="m-3 text-muted">
               <span class="card-title h3">
-                TBA  /  TBA
+                Professor  /  Zhejiang University
               </span>
             </div>
             <div class="m-3">
-              TBA
+              Zhang Fan (Terry) received the Ph.D. degree from the Department of Computer Science and Engineering, University of Connecticut, CT, USA, in 2011. He is currently a Full Professor with the College of Computer Science and Technology, Zhejiang University, Hangzhou, China. His research interests include system security, hardware security, network security, cryptography, and computer architecture. He published more than 100 papers in top conferences and journals such as Usenix Security, NDSS, TCHES, DAC, DATE, WWW, INFOCOMM, KDD, IEEE TIFS, TDSC, TC, TCAD etc.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="row p-4">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-md-2 col-sm-5">
+            <img src="./static/images/speaker/CuiYiJun.jpg" width="100%" class="img-thumbnail" />
+          </div>
+          <div class="col-md-10 col-sm-6">
+            <div class="m-3 text-muted">
+              <h3>
+                <a class="main-title">
+                  Cui Yijun
+                </a>
+              </h3>
+            </div>
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                Vice Dean of the College of Integrated Circuits  /  Nanjing University of Aeronautics and Astronautics (NUAA)
+              </span>
+            </div>
+            <div class="m-3">
+              Professor Cui Yijun serves as Vice Dean of the College of Integrated Circuits at Nanjing University of Aeronautics and Astronautics (NUAA). He served as Deputy Secretary-General of the Expert Committee at the China Semiconductor Industry Association (CSIA) and Editor-in-Chief of the IEEE Nanotechnology Council Newsletter. His research focuses on hardware information security, specializing in Physical Unclonable Function (PUF)-based lightweight authentication and post-quantum cryptographic security for next-generation systems. 
             </div>
           </div>
         </div>
@@ -188,23 +251,116 @@
       <div class="card-header">
         <div class="row">
           <div class="col-md-2 col-sm-5">
-            <img src="./static/images/speaker/Missing_avatar.svg" width="100%" class="img-thumbnail" />
+            <img src="./static/images/speaker/Nikolaos-foivos POLYCHRONOU.jpg" width="100%" class="img-thumbnail" />
           </div>
           <div class="col-md-10 col-sm-6">
             <div class="m-3 text-muted">
               <h3>
                 <a class="main-title">
-                  TBA
+                  Nikolaos-foivos POLYCHRONOU
                 </a>
               </h3>
             </div>
             <div class="m-3 text-muted">
               <span class="card-title h3">
-                TBA  /  TBA
+                Evaluator  /  Brightsight
               </span>
             </div>
             <div class="m-3">
-              TBA
+              Nikolaos-foivos POLYCHRONOU received his PhD in 2022. During his PhD, he studied solutions that will aid attack detection in resource constrained devices such as IoT. Apart from developing such solution, he evaluated how such solution and other State-of-the-Art implementations could be bypassed, and proposed ways to strength the detection capabilities, keeping in mind the resource limitation imposed by IoT systems. With a previous experience in side-channel attacks during his period of working in Grenoble INP Esisar, where he worked on second-order attacks on AES and countermeasures,  he joined Brightsight after his PhD with the role of side-channel security evaluator and later enrolled to Common Criteria evaluations., being already involved in several different certifications. He is passionate about Machine Learning and its advances in side-channel analysis.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row p-4">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-md-2 col-sm-5">
+            <img src="./static/images/speaker/BenediktGierlichs.jpg" width="100%" class="img-thumbnail" />
+          </div>
+          <div class="col-md-10 col-sm-6">
+            <div class="m-3 text-muted">
+              <h3>
+                <a class="main-title">
+                  Benedikt Gierlichs
+                </a>
+              </h3>
+            </div>
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                Research Expert  /  KU Leuven
+              </span>
+            </div>
+            <div class="m-3">
+              Dr Benedikt Gierlichs is a research expert in the COSIC (Computer Security and Industrial Cryptography) research group at KU Leuven in Belgium. He works with the embedded security group and leads the attacks and evaluations team. His research focuses on the (physical) security of embedded devices. He has co-authored more than 60 scientific publications in peer-reviewed, international conferences and journals. He has served on many program committees of international conferences and has co-chaired 4 of them. He is a member of the IACR, a Belgian delegate to the ISO/IEC SC27 standardization group and chairman of the CHES steering committee. Dr. Gierlichs manages part of COSIC’s collaboration with industry.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row p-4">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-md-2 col-sm-5">
+            <img src="./static/images/speaker/FanJunFeng.jpg" width="100%" class="img-thumbnail" />
+          </div>
+          <div class="col-md-10 col-sm-6">
+            <div class="m-3 text-muted">
+              <h3>
+                <a class="main-title">
+                  Fan Junfeng
+                </a>
+              </h3>
+            </div>
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                Founder  /  Open Security Research (OSR)
+              </span>
+            </div>
+            <div class="m-3">
+              Fan Junfeng received his Ph.D. from COSIC, KU Leuven. He is a research fellow at Tsinghua University and the founder of Open Security Research (OSR). His primary research interest is in high-performance cryptographic chip design. He has served as a Program Committee member for the IACR CHES conference for many years, and was the General Chair of CHES 2021. He is also a co-designer of the BFV algorithm.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row p-4">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-md-2 col-sm-5">
+            <img src="./static/images/speaker/ZhangXiaoHu.jpg" width="100%" class="img-thumbnail" />
+          </div>
+          <div class="col-md-10 col-sm-6">
+            <div class="m-3 text-muted">
+              <h3>
+                <a class="main-title">
+                  Zhang Xiaohu
+                </a>
+              </h3>
+            </div>
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                Chief Expert of Hardware Security  /  Huawei
+              </span>
+            </div>
+            <div class="m-3">
+              Zhang Xiaohu received his Ph.D. from Institute of Theoretical Physics, Chinese Academy of Sciences and B.S. from Tsinghua University. He has served the industry in hardware security for 10+ years and is currently chief expert of Hardware Security at Huawei Technologies.  He is working on top-level planning, research/innovation, standardization/certification, and normalized engineering for hardware security industry practices. He owns 18 patents and CISSP certified.
             </div>
           </div>
         </div>
